--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "axios": "^1.3.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-bootstrap": "^2.7.0",
+        "react-dom": "^18.2.0",
+        "react-router-bootstrap": "^0.26.2",
+        "react-router-dom": "^6.8.1"
     },
     "devDependencies": {
         "@types/react": "^18.0.27",
